--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
                 "output": "assets"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["src/theme/variables.scss", "src/styles/global.scss"],
             "scripts": []
           },
           "configurations": {
@@ -106,7 +106,7 @@
                 "output": "assets"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["src/theme/variables.scss", "src/styles/global.scss"],
             "scripts": []
           },
           "configurations": {
