--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "5.5.1",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.6.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "firebase-tools": "^13.0.3",
