--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/core": "5.5.1",
     "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
