--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.7",
+    "@capacitor/push-notifications": "^5.1.1",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.6.6",
     "@ionic/pwa-elements": "^3.2.2",
